[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audiopro"
version = "0.9.0"
authors = [
  { name="Parsa Sabet", email="parsa2003sabet@icloud.com" }
]
keywords = ["audio", "processing", "audio processing", "music processing", "sound processing"]
description = "Multi-thread audio processing with performance monitoring library"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "librosa==0.10.2.post1",
    "numpy==1.26.3",
    "psutil==6.1.1",
    "setuptools>=69.0.3",  # Added for distutils
    "GPUtil>=1.4.0",
    "numba==0.61.0",
    "msgpack==1.1.0",
    "soundfile==0.13.1",
    "scikit-learn==1.3.2",
    "joblib==1.3.2",
    "decorator==5.1.1",
    "pooch==1.8.2"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["audiopro"]