[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
dependencies = [
    "aiofiles==24.1.0",
    "argcomplete==3.5.3",
    "charset-normalizer==3.4.1",
    "colorama==0.4.6",
    "commitizen==4.1.1",
    "decli==0.6.2",
    "essentia==2.1b6.dev1177",
    "Jinja2==3.1.5",
    "MarkupSafe==3.0.2",
    "msgpack==1.1.0",
    "numpy>=1.24.3,<2.0.0",
    "orjson==3.10.15",
    "packaging==24.2",
    "prompt_toolkit==3.0.50",
    "psutil==6.1.1",
    "PyYAML==6.0.2",
    "questionary==2.1.0",
    "setuptools==75.8.0",
    "six==1.17.0",
    "termcolor==2.5.0",
    "tomlkit==0.13.2",
    "wcwidth==0.2.13",
]
name = "audiopro"
version = "0.14.0"
authors = [{ name = "Parsa Sabet", email = "parsa2003sabet@icloud.com" }]
keywords = [
    "audio",
    "processing",
    "audio processing with Essentia",
    "music processing with Essentia",
    "sound processing with Essentia",
]
description = "Multi-thread audio processing with performance monitoring library, with parallel processing and real-time monitoring. Using the Essentia C++ library."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = "==3.12.6"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["audiopro*"]
namespaces = true
